  * Fixed sizing issue with arg clamps.
  * Renaming action blocks takes into account type of action block.
  * Added support for passing args to actions and returning values
    (w/Amit Kumar Jha).

0.9
  * Added How to Guide.
  * Added URL argument to run projects i.e., ?file=foo.tb&run=True
   (w/Amit Kumar Jha).
  * Improved design of conditional blocks to stack more compactly.

TODO:
  * Better model and view distinction in code
  * Browser for plugins
  * Save errors
  * Save to javascript
  * RTL support
  * Make expand an array, one element for each arg or slot
  * User-defined block types
  * Artwork beautification?
  * Try to detect difference between unknown flow and arg blocks
  * What palette/block features from the Python version do we need to port?
  * Do we need to add support for plugins init, quit, etc.?
  * Better interoperability with Python version
  * Sugar datastore/toolbar support
  * Unit tests
  * Make error messages extendable with plugins.
  * Improve design of boolean blocks a la conditional blocks.

FEATURE IDEAS:
  * Local variables? (e.g., boxes only defined inside an action?) Note that
    we can use turtlename to create instance variables.
  * Pass argments to actions? (and arg blocks to reference them)?
  * Arrays
  * Color mixer that outputs a stack: set hue; set value; set chroma.

ISSUES:
  * Find a scalable approach to drawing on the canvas
  * Auto generation of named action blocks. The issue is order of operations:
    (1) renaming of an action block triggers the creation of a named do block;
    (2a) adding args morphs it into a named do args block;
    (2b) adding return morphs it into a named calc block;
    (2c) adding args and return morphs it into a named calc args block;
    (3a) removing return from a calc block makes it a do block;
    (3b) removing args from a calc arg block makes it a calc block;
    (3c) removing args from a do arg block makes it a do block;